# modal-comfyui-example

./: .coverage  .env.test  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
app/: _modal.py  main.py  router.py  settings.py
app/comfyui/: router.py  schemas.py  service.py
static/comfyui/: workflow_api.json
